--- a/tests/smoke/CSharp70/CSharp70.csproj
+++ b/tests/smoke/CSharp70/CSharp70.csproj
@@ -42,40 +42,40 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DiscardOutVariablesInObjectCreations\ObjectCreationsThatAreCandidatesToDiscardOutVariables.cs" />
-    <Compile Include="UseExpressionBodyForLocalFunctions\LocalFunctionsThatAlreadyHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForLocalFunctions\LocalFunctionsThatAreCandidatesToHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForLocalFunctions\LocalFunctionsThatAreNotCandidatesToHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForLocalFunctions\EmptyLocalFunctions.cs" />
-    <Compile Include="UseExpressionBodyForConstructors\ConstructorsThatAlreadyHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForConstructors\ConstructorsThatAreNotCandidatesToHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForConstructors\ConstructorsThatAreCandidatesToHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForConstructors\EmptyConstructors.cs" />
-    <Compile Include="UseExpressionBodyForDestructors\DestructorsThatAlreadyHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForDestructors\DestructorsThatAreCandidatesToHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForDestructors\DestructorsThatAreNotCandidatesToHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForDestructors\EmptyDestructors.cs" />
-    <Compile Include="UseExpressionBodyForGetAccessorsInIndexers\GetAccessorsThatAlreadyHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForGetAccessorsInIndexers\GetAccessorsThatAreCandidatesToHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForGetAccessorsInIndexers\GetAccessorsThatAreNotCandidatesToHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForSetAccessorsInIndexers\SetAccessorsThatAlreadyHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForSetAccessorsInIndexers\SetAccessorsThatAreCandidatesToHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForSetAccessorsInIndexers\SetAccessorsThatAreNotCandidatesToHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForSetAccessorsInProperties\EmptySetAccessors.cs" />
-    <Compile Include="UseExpressionBodyForSetAccessorsInProperties\SetAccessorsThatAlreadyHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForSetAccessorsInProperties\SetAccessorsThatAreCandidatesToHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForSetAccessorsInProperties\SetAccessorsThatAreNotCandidatesToHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForGetAccessorsInProperties\GetAccessorsThatAlreadyHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForGetAccessorsInProperties\GetAccessorsThatAreCandidatesToHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForGetAccessorsInProperties\GetAccessorsThatAreNotCandidatesToHaveExpressionBody.cs" />
-    <Compile Include="UseExpressionBodyForGetAccessorsInProperties\EmptyGetAccessors.cs" />
-    <Compile Include="DiscardOutVariablesInMethodInvocations\MethodInvocationsThatAreCandidatesToDiscardOutVariables.cs" />
-    <Compile Include="UseOutVariablesInObjectCreations\ObjectCreationsThatAreCandidatesToHaveOutVariables.cs" />
-    <Compile Include="UseOutVariablesInObjectCreations\ObjectCreationsThatAreNotCandidatesToHaveOutVariables.cs" />
-    <Compile Include="UseOutVariablesInObjectCreations\OutInConstructorsClass.cs" />
-    <Compile Include="UseOutVariablesInMethodInvocations\MethodInvocationsThatAreNotCandidatesToHaveOutVariables.cs" />
-    <Compile Include="UseOutVariablesInMethodInvocations\MethodInvocationsThatAreCandidatesToHaveOutVariables.cs" />
-    <Compile Include="UseOutVariablesInMethodInvocations\OutInMethodsClass.cs" />
+    <Compile Include="OutVariables\DiscardOutVariablesInObjectCreations\ObjectCreationsThatAreCandidatesToDiscardOutVariables.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForLocalFunctions\LocalFunctionsThatAlreadyHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForLocalFunctions\LocalFunctionsThatAreCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForLocalFunctions\LocalFunctionsThatAreNotCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForLocalFunctions\EmptyLocalFunctions.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForConstructors\ConstructorsThatAlreadyHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForConstructors\ConstructorsThatAreNotCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForConstructors\ConstructorsThatAreCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForConstructors\EmptyConstructors.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForDestructors\DestructorsThatAlreadyHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForDestructors\DestructorsThatAreCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForDestructors\DestructorsThatAreNotCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForDestructors\EmptyDestructors.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForGetAccessorsInIndexers\GetAccessorsThatAlreadyHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForGetAccessorsInIndexers\GetAccessorsThatAreCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForGetAccessorsInIndexers\GetAccessorsThatAreNotCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForSetAccessorsInIndexers\SetAccessorsThatAlreadyHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForSetAccessorsInIndexers\SetAccessorsThatAreCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForSetAccessorsInIndexers\SetAccessorsThatAreNotCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForSetAccessorsInProperties\EmptySetAccessors.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForSetAccessorsInProperties\SetAccessorsThatAlreadyHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForSetAccessorsInProperties\SetAccessorsThatAreCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForSetAccessorsInProperties\SetAccessorsThatAreNotCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForGetAccessorsInProperties\GetAccessorsThatAlreadyHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForGetAccessorsInProperties\GetAccessorsThatAreCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForGetAccessorsInProperties\GetAccessorsThatAreNotCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="ExpressionBodiedMembers\UseExpressionBodyForGetAccessorsInProperties\EmptyGetAccessors.cs" />
+    <Compile Include="OutVariables\DiscardOutVariablesInMethodInvocations\MethodInvocationsThatAreCandidatesToDiscardOutVariables.cs" />
+    <Compile Include="OutVariables\UseOutVariablesInObjectCreations\ObjectCreationsThatAreCandidatesToHaveOutVariables.cs" />
+    <Compile Include="OutVariables\UseOutVariablesInObjectCreations\ObjectCreationsThatAreNotCandidatesToHaveOutVariables.cs" />
+    <Compile Include="OutVariables\UseOutVariablesInObjectCreations\OutInConstructorsClass.cs" />
+    <Compile Include="OutVariables\UseOutVariablesInMethodInvocations\MethodInvocationsThatAreNotCandidatesToHaveOutVariables.cs" />
+    <Compile Include="OutVariables\UseOutVariablesInMethodInvocations\MethodInvocationsThatAreCandidatesToHaveOutVariables.cs" />
+    <Compile Include="OutVariables\UseOutVariablesInMethodInvocations\OutInMethodsClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
