--- a/src/Sharpen.Engine/Sharpen.Engine.csproj
+++ b/src/Sharpen.Engine/Sharpen.Engine.csproj
@@ -224,11 +224,16 @@
     <Compile Include="..\AssemblyInfo.Common.cs">
       <Link>Properties\AssemblyInfo.Common.cs</Link>
     </Compile>
+    <Compile Include="CSharpFeatures\NameofExpressions.cs" />
     <Compile Include="CSharpFeatures\DefaultExpressions.cs" />
     <Compile Include="CSharpFeatures\OutVariables.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
+    <Compile Include="Extensions\NamespaceSymbolExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\SyntaxNodeExtensions.cs" />
+    <Compile Include="Extensions\SyntaxTokenExtensions.cs" />
     <Compile Include="Extensions\TextSpanExtensions.cs" />
+    <Compile Include="SharpenSuggestions\CSharp60\NameofExpressions\UseNameofExpressionForThrowingArgumentExceptions.cs" />
     <Compile Include="SharpenSuggestions\CSharp70\ExpressionBodiedMembers\UseExpressionBodyForLocalFunctions.cs" />
     <Compile Include="SharpenSuggestions\CSharp70\OutVariables\BaseUseOutVariables.cs" />
     <Compile Include="SharpenSuggestions\CSharp70\OutVariables\DiscardOutVariablesInMethodInvocations.cs" />
