--- a/src/Sharpen.Engine/Sharpen.Engine.csproj
+++ b/src/Sharpen.Engine/Sharpen.Engine.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Extensions\SyntaxNodeExtensions.cs" />
     <Compile Include="Extensions\SyntaxTokenExtensions.cs" />
     <Compile Include="Extensions\TextSpanExtensions.cs" />
+    <Compile Include="SharpenSuggestions\CSharp60\NameofExpressions\UseNameofExpressionInDependencyPropertyDeclarations.cs" />
     <Compile Include="SharpenSuggestions\CSharp60\NameofExpressions\UseNameofExpressionForThrowingArgumentExceptions.cs" />
     <Compile Include="SharpenSuggestions\CSharp70\ExpressionBodiedMembers\UseExpressionBodyForLocalFunctions.cs" />
     <Compile Include="SharpenSuggestions\CSharp70\OutVariables\BaseUseOutVariables.cs" />
