--- a/src/Sharpen.VisualStudioExtension/packages.config
+++ b/src/Sharpen.VisualStudioExtension/packages.config
@@ -15,6 +15,7 @@
   <package id="Microsoft.VisualStudio.Imaging" version="15.0.26606" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.LanguageServices" version="2.4.0" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.SDK.Analyzers" version="15.7.7" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.9" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.15.0" version="15.0.26606" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.26606" targetFramework="net46" />
@@ -28,6 +29,7 @@
   <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6070" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50727" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Threading" version="15.3.23" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.7.18" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Utilities" version="15.0.26606" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="15.3.15" targetFramework="net46" />
   <package id="Microsoft.VSSDK.BuildTools" version="15.1.192" targetFramework="net46" developmentDependency="true" />
