refactor: Adds KnownTypeInfo

--- a/src/Sharpen.Engine/Sharpen.Engine.csproj
+++ b/src/Sharpen.Engine/Sharpen.Engine.csproj
@@ -225,6 +225,7 @@
     <Compile Include="Extensions\SyntaxNodeExtensions.cs" />
     <Compile Include="Extensions\SyntaxTokenExtensions.cs" />
     <Compile Include="Extensions\TextSpanExtensions.cs" />
+    <Compile Include="KnownTypeInfo.cs" />
     <Compile Include="SharpenSuggestions\CSharp50\AsyncAwait\ConsiderAwaitingEquivalentAsynchronousMethod.cs" />
     <Compile Include="SharpenSuggestions\CSharp50\AsyncAwait\EquivalentAsynchronousMethodFinder.cs" />
     <Compile Include="SharpenSuggestions\CSharp50\AsyncAwait\HardcodedLookupBasedEquivalentAsynchronousMethodFinder.cs" />
