--- a/tests/smoke/CSharp50/CSharp50.csproj
+++ b/tests/smoke/CSharp50/CSharp50.csproj
@@ -49,6 +49,14 @@
   <ItemGroup>
     <Compile Include="AsyncAwait\AwaitEquivalentAsynchronousMethod\MethodsThatDoNotHaveEquivalentAsynchronousMethod.cs" />
     <Compile Include="AsyncAwait\AwaitEquivalentAsynchronousMethod\MethodsThatHaveEquivalentAsynchronousMethod.cs" />
+    <Compile Include="AsyncAwait\AwaitTaskDelayInsteadOfCallingThreadSleep\TaskDelayCanBeAwaitedInsteadOfCallingThreadSleep.cs" />
+    <Compile Include="AsyncAwait\AwaitTaskDelayInsteadOfCallingThreadSleep\TaskDelayCannotBeAwaitedInsteadOfCallingThreadSleep.cs" />
+    <Compile Include="AsyncAwait\AwaitTaskWhenAnyInsteadOfCallingTaskWaitAny\TaskWhenAnyCanBeAwaitedInsteadOfCallingTaskWaitAny.cs" />
+    <Compile Include="AsyncAwait\AwaitTaskWhenAnyInsteadOfCallingTaskWaitAny\TaskWhenAnyCannotBeAwaitedInsteadOfCallingTaskWaitAny.cs" />
+    <Compile Include="AsyncAwait\AwaitTaskWhenAllInsteadOfCallingTaskWaitAll\TaskWhenAllCanBeAwaitedInsteadOfCallingTaskWaitAll.cs" />
+    <Compile Include="AsyncAwait\AwaitTaskWhenAllInsteadOfCallingTaskWaitAll\TaskWhenAllCannotBeAwaitedInsteadOfCallingTaskWaitAll.cs" />
+    <Compile Include="AsyncAwait\AwaitTaskInsteadOfCallingTaskWait\TaskCannotBeAwaitedInsteadOfCallingTaskWait.cs" />
+    <Compile Include="AsyncAwait\AwaitTaskInsteadOfCallingTaskWait\TaskCanBeAwaitedInsteadOfCallingTaskWait.cs" />
     <Compile Include="AsyncAwait\ConsiderAwaitingEquivalentAsynchronousMethod\MethodsThatDoNotHaveEquivalentAsynchronousMethod.cs" />
     <Compile Include="AsyncAwait\ConsiderAwaitingEquivalentAsynchronousMethod\MethodsThatHaveEquivalentAsynchronousMethod.cs" />
   </ItemGroup>
