--- a/tests/smoke/GeneratedDocuments/GeneratedDocuments.csproj
+++ b/tests/smoke/GeneratedDocuments/GeneratedDocuments.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmptyConstructors.cs" />
     <Compile Include="EmptyConstructors.Generated.cs" />
     <Compile Include="EmptyConstructors.Designer.cs" />
   </ItemGroup>
