--- a/src/Sharpen.VisualStudioExtension/Sharpen.VisualStudioExtension.csproj
+++ b/src/Sharpen.VisualStudioExtension/Sharpen.VisualStudioExtension.csproj
@@ -60,6 +60,7 @@
       <Link>Properties\AssemblyInfo.Common.cs</Link>
     </Compile>
     <Compile Include="Commands\AnalyzeSelectedProjectsCommand.cs" />
+    <Compile Include="Commands\ContextCommands\AnalyzeSelectedProjectsContextCommand.cs" />
     <Compile Include="Commands\ContextCommands\AnalyzeSolutionContextCommand.cs" />
     <Compile Include="Commands\ContextCommands\AnalyzeCurrentDocumentContextCommand.cs" />
     <Compile Include="Commands\BaseAnalyzeCommand.cs" />
@@ -86,7 +87,7 @@
     </Compile>
     <Compile Include="ToolWindows\AnalysisResultTreeViewItems\BaseTreeViewItem.cs" />
     <Compile Include="UserInteraction.cs" />
-    <Compile Include="VisualStudioWorkspaceExtensions.cs" />
+    <Compile Include="VisualStudioExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
