feat: Adds "Analyze with Sharpen" to the file context menu

--- a/src/Sharpen.VisualStudioExtension/Sharpen.VisualStudioExtension.csproj
+++ b/src/Sharpen.VisualStudioExtension/Sharpen.VisualStudioExtension.csproj
@@ -60,6 +60,7 @@
       <Link>Properties\AssemblyInfo.Common.cs</Link>
     </Compile>
     <Compile Include="Commands\AnalyzeSelectedProjectsCommand.cs" />
+    <Compile Include="Commands\ContextCommands\AnalyzeSelectedDocumentsContextCommand.cs" />
     <Compile Include="Commands\ContextCommands\AnalyzeSelectedProjectsContextCommand.cs" />
     <Compile Include="Commands\ContextCommands\AnalyzeSolutionContextCommand.cs" />
     <Compile Include="Commands\ContextCommands\AnalyzeCurrentDocumentContextCommand.cs" />
