--- a/src/Sharpen.Engine.Tests.Unit/packages.config
+++ b/src/Sharpen.Engine.Tests.Unit/packages.config
@@ -8,6 +8,7 @@
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.4.0" targetFramework="net46" />
   <package id="NUnit" version="3.10.1" targetFramework="net46" />
   <package id="NUnit.Engine" version="3.8.0" targetFramework="net46" />
+  <package id="NUnit3TestAdapter" version="3.12.0" targetFramework="net46" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net46" />
