--- a/src/Sharpen.VisualStudioExtension/Sharpen.VisualStudioExtension.csproj
+++ b/src/Sharpen.VisualStudioExtension/Sharpen.VisualStudioExtension.csproj
@@ -60,12 +60,14 @@
       <Link>Properties\AssemblyInfo.Common.cs</Link>
     </Compile>
     <Compile Include="Commands\AnalyzeSelectedProjectsCommand.cs" />
+    <Compile Include="Commands\CommandServicesContainer.cs" />
     <Compile Include="Commands\ContextCommands\AnalyzeSelectedFoldersContextCommand.cs" />
     <Compile Include="Commands\ContextCommands\AnalyzeSelectedDocumentsContextCommand.cs" />
     <Compile Include="Commands\ContextCommands\AnalyzeSelectedProjectsContextCommand.cs" />
     <Compile Include="Commands\ContextCommands\AnalyzeSolutionContextCommand.cs" />
     <Compile Include="Commands\ContextCommands\AnalyzeCurrentDocumentContextCommand.cs" />
     <Compile Include="Commands\BaseAnalyzeCommand.cs" />
+    <Compile Include="Commands\ICommandServicesContainer.cs" />
     <Compile Include="Commands\ShowOptionsDialogCommand.cs" />
     <Compile Include="Commands\BaseSharpenCommand.cs" />
     <Compile Include="Converters\NullToCollapsedConverter.cs" />
